# wildchat-hard-ru

./: .gitignore  README.md  main.ipynb  main.py  pyproject.toml  wildchat_hard_ru.json
