
[project]
name = "wildchat-hard-ru"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.14",
    "bokeh==3.6.3",
    "ipykernel>=6.29.5",
    "llvmlite>=0.44.0",
    "numba>=0.61.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "tiktoken>=0.9.0",
    "umap-learn>=0.5.7",
]
